crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__parse_tstring_nested_string_spec.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..13,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(None),
                    range: 0..13,
                    value: TStringValue {
                        inner: Single(
                            TString {
                                range: 0..13,
                                node_index: NodeIndex(None),
                                elements: [
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 2..12,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 3..6,
                                                    id: Name("foo"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: Some(
                                                InterpolatedStringFormatSpec {
                                                    range: 7..11,
                                                    node_index: NodeIndex(None),
                                                    elements: [
                                                        Interpolation(
                                                            InterpolatedElement {
                                                                range: 7..11,
                                                                node_index: NodeIndex(None),
                                                                expression: StringLiteral(
                                                                    ExprStringLiteral {
                                                                        node_index: NodeIndex(None),
                                                                        range: 8..10,
                                                                        value: StringLiteralValue {
                                                                            inner: Single(
                                                                                StringLiteral {
                                                                                    range: 8..10,
                                                                                    node_index: NodeIndex(None),
                                                                                    value: "",
                                                                                    flags: StringLiteralFlags {
                                                                                        quote_style: Single,
                                                                                        prefix: Empty,
                                                                                        triple_quoted: false,
                                                                                        unclosed: false,
                                                                                    },
                                                                                },
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                                debug_text: None,
                                                                conversion: None,
                                                                format_spec: None,
                                                            },
                                                        ),
                                                    ],
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                flags: TStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
